[package]
name = "briefly"
authors = ["adrianEffe <adrian.iosdev@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.6.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.171", features = ["derive"] }

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
    
[dev-dependencies]
reqwest = "0.11.18"
