[package]
name = "briefly"
authors = ["adrianEffe <adrian.iosdev@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.6.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.106"
config = "0.13.3"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.21", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.3", features = ["trace"] }
md5 = "0.7.0"
base62 = "2.0.2"
anyhow = "1.0.73"
shuttle-runtime = "0.25.0"
shuttle-axum = "0.25.0"
shuttle-shared-db = { version = "0.25.0", features = ["postgres"] }

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
    
[dev-dependencies]
reqwest = "0.11.18"
